# newsletter

./: .dockerignore  .editorconfig  .env  .env.database  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  config.yaml  docker-compose.yaml  spec.yaml  sqlx-data-test.json  sqlx-data.json
.devcontainer/: devcontainer.json
.github/workflows/: audit.yaml  ci.yaml  general.yaml  publish.yaml
config/: base.yaml  ci.yaml  devcontainer.yaml  local.yaml  production.yaml
docker/: Dockerfile.dev
migrations/: 20210824203527_make_status_not_null_in_subscriptions.sql  20210824203719_create_subscription_tokens_table.sql  20220322214004_create_idempotency_table.sql  20220323063645_create_newsletter_issues_table.sql  20220323231404_create_issue_delivery_queue_table.sql
scripts/: generate_sqlx_data.sh  init_db.sh  init_db_ci.sh  wait_for_db.sh
src/: config.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: logout.rs  mod.rs
src/routes/admin/dashboard/: dashboard.html  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  newsletter.html  post.rs
src/routes/admin/password/: get.rs  mod.rs  password.html  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
