[package]
name = "newsletter"
version = "0.3.1"
edition = "2018"

[lib]
path = "src/lib.rs"
name = "libnewsletter"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-http = "=3.0.0-beta.9"
actix-web = "=4.0.0-beta.8"
argon2 = { version = "0.3", features = ["std"] }
anyhow = "1"
base64 = "0.13"
chrono = "0.4.15"
config = "0.11.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.19"
tracing-actix-web = "0.4.0-beta.8"
tracing-bunyan-formatter = "0.2.4"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
unicode-segmentation = "1.8.0"
url = "2.2"
uuid = { version = "0.8.1", features = ["v4"] }
validator = "0.14.0"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"

[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
fake = "~2.3"
linkify = "0.5.0"
once_cell = "1.8.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
