[package]
name = "newsletter"
version = "0.3.1"
edition = "2021"
rust-version = "1.59"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"
name = "libnewsletter"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-web = "4"
argon2 = { version = "0.3", features = ["std"] }
anyhow = "1"
base64 = "0.13"
chrono = "0.4.15"
config = "0.11.0"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.19"
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.8.0"
url = "2.2"
uuid = { version = "0.8.1", features = ["v4"] }
validator = "0.14.0"
thiserror = "1"

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
claim = "0.5"
fake = "2.3"
linkify = "0.8"
once_cell = "1.8"
quickcheck = "1.0.3"
quickcheck_macros = "1"
serde_json = "1"
wiremock = "0.5"
