[package]
name = "newsletter"
version = "0.4.0"
edition = "2021"
rust-version = "1.59"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"
name = "libnewsletter"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-lab = "0.15"
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
argon2 = { version = "0.3", features = ["std"] }
anyhow = "1"
base64 = "0.13"
chrono = "0.4.15"
config = "0.11.0"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.30"
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.8.0"
url = "2.2"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
validator = "0.14.0"

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
claim = "0.5"
fake = "2.3"
linkify = "0.8"
once_cell = "1.8"
quickcheck = "1.0.3"
quickcheck_macros = "1"
wiremock = "0.5"
